Update command data for MG/ZS

--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -16,3 +16,8 @@ supported_commands_by_ecu:
   - 0151:FUEL_TYP
   - 015A:APP_R
   - 7E3.7EB.0131
+unsupported_commands_by_ecu:
+  "7DF":
+  - 7DF.7ED.22B029:MG_HVBAT_CMU06_MAXTEMP,MG_HVBAT_CMU06_MAXVOLT,MG_HVBAT_CMU06_MINTEMP,MG_HVBAT_CMU06_MINVOLT
+  - 7DF.7ED.22B0BB:MG_HVBAT_CMU10_MAXTEMP,MG_HVBAT_CMU10_MAXVOLT,MG_HVBAT_CMU10_MINTEMP,MG_HVBAT_CMU10_MINVOLT
+  - 7DF.7ED.22B115:MG_HVBAT_CMU24_MAXTEMP,MG_HVBAT_CMU24_MAXVOLT,MG_HVBAT_CMU24_MINTEMP,MG_HVBAT_CMU24_MINVOLT
