Update command data for MG/ZS

--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -1,5 +1,15 @@
-model_year: 2021
+model_year: 2023
 supported_commands_by_ecu:
+  "710":
+  - 710.718.22B921:MG_GWM_ODO
+  - 710.718.22D001:MG_GWM_STATUS
+  "7DF":
+  - 7DF.7EC.22B010:MG_EVCC_VOLTAGE
+  - 7DF.7ED.22B011:MG_HVBAT_CMU03_MAXTEMP,MG_HVBAT_CMU03_MAXVOLT,MG_HVBAT_CMU03_MINTEMP,MG_HVBAT_CMU03_MINVOLT
+  - 7DF.7ED.22B042:MG_HVBAT_VOLTAGE
+  - 7DF.7ED.22B045:MG_HVBAT_RESISTANCE
+  - 7DF.7ED.22B10E:MG_HVBAT_CMU17_MAXTEMP,MG_HVBAT_CMU17_MAXVOLT,MG_HVBAT_CMU17_MINTEMP,MG_HVBAT_CMU17_MINVOLT
+  - 7DF.7ED.22B113:MG_HVBAT_CMU22_MAXTEMP,MG_HVBAT_CMU22_MAXVOLT,MG_HVBAT_CMU22_MINTEMP,MG_HVBAT_CMU22_MINVOLT
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -12,19 +22,31 @@ supported_commands_by_ecu:
   - 010D:VSS
   - 010E:SPARKADV
   - 010F:IAT
+  - 0110:MAF
   - 0111:TP
   - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
-  - 0114:O2S11,SHRTFT11
   - 0115:O2S12,SHRTFT11
   - 011C:OBDSUP
+  - 011F:RUNTM
   - 0121:MIL_DIST
   - 012E:EVAP_PCT
+  - 012F:FLI
   - 0130:WARM_UPS
   - 0131:CLR_DIST
+  - 0133:BARO
+  - 0134:LAMBDA11_CURRENT,O2S11_CURRENT
+  - 013C:CATEMP11
+  - 0142:VPWR
+  - 0143:LOAD_ABS
+  - 0144:EQ_RAT
   - 0145:TP_R
   - 0146:AAT
   - 0147:TP_B
+  - 0149:APP_D
+  - 014A:APP_E
   - 014C:TAC_PCT
+  - 0156:LGSO2FT1
+  - 0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
   "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0105:ECT
@@ -35,24 +57,6 @@ supported_commands_by_ecu:
   - 0131:CLR_DIST
   - 0142:VPWR
   - 014E:CLR_TIME
-  "7E3":
-  - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
-  - 0105:ECT
-  - 010C:RPM
-  - 010D:VSS
-  - 011C:OBDSUP
-  - 011F:RUNTM
-  - 0121:MIL_DIST
-  - 0130:WARM_UPS
-  - 0131:CLR_DIST
-  - 0142:VPWR
-  - 0146:AAT
-  - 014E:CLR_TIME
-  - 0151:FUEL_TYP
-  - 015A:APP_R
-  - 7E3.7EB.0131
 unsupported_commands_by_ecu:
   "7DF":
-  - 7DF.7ED.22B029:MG_HVBAT_CMU06_MAXTEMP,MG_HVBAT_CMU06_MAXVOLT,MG_HVBAT_CMU06_MINTEMP,MG_HVBAT_CMU06_MINVOLT
-  - 7DF.7ED.22B0BB:MG_HVBAT_CMU10_MAXTEMP,MG_HVBAT_CMU10_MAXVOLT,MG_HVBAT_CMU10_MINTEMP,MG_HVBAT_CMU10_MINVOLT
-  - 7DF.7ED.22B115:MG_HVBAT_CMU24_MAXTEMP,MG_HVBAT_CMU24_MAXVOLT,MG_HVBAT_CMU24_MINTEMP,MG_HVBAT_CMU24_MINVOLT
+  - 7DF.7ED.22B046:MG_HVBAT_RAW_SOC
